--- a/waybar/style.css
+++ b/waybar/style.css
@@ -8,12 +8,12 @@
 }
 
 window#waybar {
-    background: rgba(21, 18, 27, 0);
+    background: rgba(33, 42, 54, 0);
     color: #cdd6f4;
 }
 
 tooltip {
-    background: #1e1e2e;
+    background: #212a36;
     border-radius: 10px;
     border-width: 2px;
     border-style: solid;
@@ -60,7 +60,7 @@ tooltip {
 #workspaces,
 #tray,
 #backlight {
-    background: #1e1e2e;
+    background: #212a36;
     opacity: 0.8;
     padding: 0px 10px;
     margin: 3px 0px;
@@ -86,7 +86,7 @@ tooltip {
 }
 
 #workspaces {
-    background: #1e1e2e;
+    background: #212a36;
     border-radius: 10px;
     margin-left: 10px;
     padding-right: 0px;
@@ -106,7 +106,7 @@ tooltip {
 }
 
 #clock {
-    color: #fab387;
+    /* color: #fab387; */
     border-radius: 10px 0px 0px 10px;
     margin-left: 10px;
     border-right: 0px;
